--- a/RepasoApp/src/sample/sample.fxml
+++ b/RepasoApp/src/sample/sample.fxml
@@ -1,8 +1,57 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<VBox fillWidth="false" maxHeight="800.0" maxWidth="800.0" minHeight="600.0" minWidth="600.0" prefHeight="800" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <HBox alignment="CENTER_LEFT" fillHeight="false" prefHeight="32.0" prefWidth="600.0" spacing="100.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <children>
+            <Label text="Tema" />
+            <Label text="Apartado" />
+            <Label text="Texto" />
+         </children>
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+      </HBox>
+      <HBox prefHeight="200.0" prefWidth="600.0" spacing="5.0">
+         <children>
+            <ListView prefHeight="200.0" prefWidth="126.0" />
+            <ListView prefHeight="200.0" prefWidth="137.0" />
+            <TextField alignment="TOP_LEFT" prefHeight="200.0" prefWidth="324.0" />
+         </children>
+         <padding>
+            <Insets left="2.0" right="2.0" />
+         </padding>
+      </HBox>
+      <Pane prefHeight="28.0" prefWidth="602.0">
+         <children>
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="511.0" layoutY="2.0" mnemonicParsing="false" text="Generar Test" textAlignment="CENTER" />
+         </children>
+      </Pane>
+      <VBox alignment="TOP_CENTER" prefHeight="256.0" prefWidth="602.0">
+         <children>
+            <Label prefHeight="40.0" prefWidth="263.0" text="Aquí podria aparecer Test Tema: x Apartado:y" />
+            <Label prefHeight="91.0" prefWidth="541.0" text="Pregunta generada aleatoriamente teniendo seleccionado el tema y el apartado por el usuario..." />
+            <Pane prefHeight="150.0" prefWidth="600.0">
+               <children>
+                  <Label layoutX="56.0" layoutY="30.0" text="Texto Respuesta A" />
+                  <Label layoutX="56.0" layoutY="65.0" text="Texto Respuesta B" />
+                  <Label layoutX="56.0" layoutY="100.0" text="Texto Respuesta C" />
+                  <CheckBox layoutX="502.0" layoutY="30.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox layoutX="502.0" layoutY="65.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox layoutX="502.0" layoutY="100.0" mnemonicParsing="false" text="CheckBox" />
+                  <Button layoutX="56.0" layoutY="135.0" mnemonicParsing="false" text="Comprobar" />
+                  <Label layoutX="56.0" layoutY="166.0" text="Aciertos en este test: X" />
+                  <Button layoutX="456.0" layoutY="154.0" mnemonicParsing="false" text="Actualizar estadisticas" />
+               </children>
+            </Pane>
+         </children>
+      </VBox>
+   </children>
+</VBox>
